# TechCloud

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TechCloud.pro  cpp.clang-format  main.cpp
data/: Example-Note.json  Example-UserPrefs.json
include/reader/: BuildNote.hpp  Note.hpp  NoteFactory.hpp  Note_preference.hpp
include/ui/: ResultWindow.h
src/reader/: BuildNote.cpp  Note.cpp  Note.hpp  NoteFactory.cpp  Note_preference.cpp  Note_preference.hpp
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  ResultWindow.cpp  ResultWindow.h  ResultWindow.ui
